--- a/src/renderer/stl.messages.css
+++ b/src/renderer/stl.messages.css
@@ -38,6 +38,17 @@
   margin-left: 5px;
 }
 
+.user-icon {
+  float: left; 
+  margin-right: 10px;
+  width: 48px;
+  border-radius: 50%;
+  padding-top: 3px;
+}
+  .user-icon img { width: 48px; }
+
+.message-container { clear: both; }
+
 .message {
   margin-top: 6px;
   color: rgba(255, 255, 255, 0.7);
